Integrated order module with kafka and other services