@@ -1,17 +1,16 @@
 package com.github.sats17.inventory.controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.github.sats17.inventory.entity.Inventory;
 import com.github.sats17.inventory.entity.InventoryRepository;
-import com.github.sats17.inventory.model.KafkaEventRequest;
 import com.github.sats17.inventory.utils.AppUtils;
 
 @RestController
@@ -37,7 +36,8 @@ public class ApiController {
 	public List<Inventory> getAllProducts() {
 		AppUtils.printLog("Data present in transaction DB " + repository.count());
 		Iterable<Inventory> transactionIterable = repository.findAll();
-		return StreamSupport.stream(transactionIterable.spliterator(), false).toList();
+		return StreamSupport.stream(transactionIterable.spliterator(), false)
+                .collect(Collectors.toList());
 	}
 
 }
